<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/refresh_layout"
        tools:context=".MainActivity">

    <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_data_usage"
            android:overScrollMode="never"
            android:layout_width="match_parent"
            android:background="@color/lightGray"
            android:layout_height="match_parent"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
</android.support.v4.widget.SwipeRefreshLayout>